syntax = "proto3";

package pbstch;

import "gogoproto-1.4.3/gogoproto/gogo.proto";
import "proto/pbtypes/block.proto";

enum From {
  option (gogoproto.goproto_enum_stringer) = true;
  option (gogoproto.goproto_enum_prefix)   = true;
  LEADER = 0 [(gogoproto.enumvalue_customname) = "Leader"];
  REPLICA = 1 [(gogoproto.enumvalue_customname) = "Replica"];
}

message IdentityX {
  bytes x = 1;
  string id = 2 [(gogoproto.customname) = "ID"];
}

message FnX {
  string from = 1;
  bytes data = 2;
  bytes x = 3;
}

message PublicKeySeg {
  string from = 1;
  bytes public_key = 2;
}

message SchnorrSig {
  From from = 1;
  bytes s = 2;
  bytes d = 3;
  pbtypes.Block block = 4;
  int64 tx_index = 5;
  bytes tx = 6;
}

message Message {
  oneof data {
    IdentityX identity_x = 1;
    FnX Fnx = 2;
    PublicKeySeg PublicKeySeg = 3;
    SchnorrSig SchnorrSig = 4;
  }
}